--- a/css/style.css
+++ b/css/style.css
@@ -34,29 +34,18 @@ a {
 /* ------------------------------ Sección Menú -------------------------------*/
 .cabecera {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
     background-color: var(--color-de-fondo);
     padding: 16px 152px;
 }
 
-.cabecera__logo {
-    max-width: 80px;
-    /* Ajuste para pantallas pequeñas */
-}
-
 .cabecera__titulo {
+    margin: 0;
     font-size: 1.2rem;
-    text-align: center;
 }
 
 .navegacion__lista {
-    display: none;
-}
-
-.navegacion__elemento a {
-    font-size: 0.9rem;
+    padding: 0;
+    margin: 0;
 }
 
 /* ------------------------------ Sección Presentación ------------------------------*/
@@ -68,9 +57,25 @@ a {
     gap: 32px;
 }
 
+@media (max-width: 550px) {
+    .cabecera {
+        padding: 16px 8px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .navegacion__elemento:nth-child(1),
+    .navegacion__elemento:nth-child(2),
+    .navegacion__elemento:nth-child(3),
+    .navegacion__elemento:nth-child(4),
+    .navegacion__elemento:nth-child(5) {
+        display: none;
+    }
+
+}
+
 .presentacion__foto {
     width: 368px;
-    height: 368px;
 }
 
 .presentacion__contenedor {
@@ -100,8 +105,35 @@ a {
     font-size: 1.2rem;
 }
 
-.redes_img > img {
+.redes_img>img {
     width: 10px;
+}
+
+@media (max-width: 550px) {
+    .presentacion {
+        padding: 16px;
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .presentacion__titulo {
+        font-size: 2rem;
+    }
+
+    .presentacion__foto {
+        width: 35%;
+    }
+
+    .presentacion__subtitulo {
+        font-size: 1.2rem;
+    }
+
+    .redes {
+        margin: 0;
+        padding: 0;
+        gap: 16px;
+        font-size: 1.2rem;
+    }
 }
 
 /* ------------------------------ Sección sobre mí ----------------------------------*/
@@ -112,11 +144,26 @@ a {
 
 .sobre-mi__titulo {
     font-size: 2rem;
+    margin: 0;
 }
 
 .sobre-mi__texto {
-    font-size: 1rem;
-    width: 750px;
+    font-size: 1.2rem;
+    width: 70%;
+}
+
+@media (max-width: 550px) {
+    .sobre-mi {
+        padding: 16px;
+    }
+
+    .sobre-mi__titulo {
+        font-size: 1.7rem;
+    }
+
+    .sobre-mi__texto {
+        width: 100%;
+    }
 }
 
 /*------------------------------ Sección de Habilidades ------------------------------*/
@@ -124,13 +171,13 @@ a {
     padding: 32px 192px;
 }
 
-.habilidades__titulo{
+.habilidades__titulo {
     font-size: 2rem;
 }
 
 .habilidades__lista {
     display: grid;
-    grid-template-columns: repeat(6, minmax(150px, 1fr));
+    grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: minmax(100px, auto);
     justify-content: center;
     gap: 16px;
@@ -138,7 +185,8 @@ a {
 }
 
 .habilidades__elemento {
-    aspect-ratio: 1 / 1; /* Proporcionalidad */
+    aspect-ratio: 1 / 1;
+    /* Proporcionalidad */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -165,17 +213,32 @@ a {
     }
 
     .habilidades__lista {
-        grid-template-columns: repeat(4, minmax(120px, 1fr));
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 550px) {
     .habilidades {
-        padding: 0;
+        padding: 16px;
+    }
+
+    .habilidades__titulo {
+        font-size: 1.7rem;
     }
 
     .habilidades__lista {
         grid-template-columns: repeat(2, 1fr);
+    }
+
+    .habilidades__elemento {
+        aspect-ratio: 1.5 / 1;
+        /* Proporcionalidad */
+    }
+
+    .habilidades__icono {
+        width: 48px;
+        height: 48px;
+        margin-bottom: 16px;
     }
 }
 
@@ -184,13 +247,13 @@ a {
     padding: 32px 192px;
 }
 
-.aficiones__titulo{
+.aficiones__titulo {
     font-size: 2rem;
 }
 
 .aficiones__lista {
     display: grid;
-    grid-template-columns: repeat(6, minmax(150px, 1fr));
+    grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: minmax(100px, auto);
     justify-content: center;
     gap: 16px;
@@ -198,7 +261,8 @@ a {
 }
 
 .aficiones__elemento {
-    aspect-ratio: 1 / 1; /* Proporcionalidad */
+    aspect-ratio: 1 / 1;
+    /* Proporcionalidad */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -224,24 +288,151 @@ a {
     }
 
     .aficiones__lista {
-        grid-template-columns: repeat(4, minmax(120px, 1fr));
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 550px) {
     .aficiones {
-        padding: 0;
+        padding: 16px;
+    }
+
+    .aficiones__titulo {
+        font-size: 1.7rem;
     }
 
     .aficiones__lista {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .aficiones__elemento {
+        aspect-ratio: 1.5 / 1;
+        /* Proporcionalidad */
+    }
+
+    .aficiones__icono {
+        width: 48px;
+        height: 48px;
+        margin-bottom: 16px;
+    }
 }
+
+/*------------------------------ Formación Academica-------------------------*/
+.formacion {
+    background-color: var(--color-de-fondo-sobre-mi);
+}
+
+.formacion__lista {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    gap: 16px;
+    width: 100%;
+}
+
+.formacion__elemento {
+    border-radius: 8px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.formacion__icono {
+    padding: 16px;
+}
+
+.formacion__nombre,
+.formacion__detalle {
+    margin: 0;
+    margin-left: 16px;
+}
+
+.formacion__detalle {
+    margin-bottom: 16px;
+}
+
+@media (max-width: 550px) {
+
+    .formacion {
+        padding: 16px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .formacion__lista {
+        flex-direction: column;
+    }
+
+    .formacion__titulo {
+        font-size: 1.7rem;
+    }
+
+    .formacion__icono {
+        object-fit: contain;
+        height: 130px;
+        width: auto;
+        box-sizing: border-box;
+    }
+
+}
+
 /*------------------------------ Sección de Proyectos --------------------------------*/
 
 
+@media (max-width: 550px) {
+
+    .proyectos {
+        padding: 16px;
+        background-color: var(--color-de-fondo-menu);
+    }
+
+    .proyectos__titulo {
+        font-size: 1.7rem;
+    }
+
+}
+
 /*------------------------------ Sección de Contacto ---------------------------------*/
 
+
+@media (max-width: 550px) {
+
+    .contacto {
+        background-color: var(--color-de-fondo-sobre-mi);
+        padding: 16px;
+    }
+
+    .contacto__formulario {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .contacto__campo {
+        font-family: var(--fuente-principal);
+        font-size: 1rem;
+        padding: 12px 24px;
+        border-radius: 4px;
+        border: none;
+        height: 32px;
+    }
+
+    .contacto__campo--textarea {
+        resize: none;
+        height: 120px;
+    }
+
+    .contacto__boton {
+        height: 48px;
+        font-family: var(--fuente-principal);
+        font-size: 1rem;
+        border: none;
+        background-color: var(--color-de-fondo-menu);
+    }
+
+}
 
 /* ------------------------------ Responsividad ---------------------------------------*/
 
